re PR c/18715 (warning: "enumeration value not handled in switch" for '...' ranges)

2005-08-22  Andrew Pinski  <pinskia@physics.uc.edu>

        PR c/18715
        * c-common.c (c_do_switch_warnings): Look for a node where the enum's
        value is inbetween the range if we did not find an exact match.

2005-08-22  Andrew Pinski  <pinskia@physics.uc.edu>

        PR c/18715
        * gcc.dg/switch-warn-3.c: New test.

From-SVN: r103346